fix(docs): implement body/query/params types on each route with swagger & fix(transfers/bank-accounts): fix user(s) bank account exists validation
